--- a/gestion de bliblioteca/index.html
+++ b/gestion de bliblioteca/index.html
@@ -10,12 +10,39 @@
     <header>
         <h1>Biblioteca</h1>
         <nav>
-            <!-- Mostrar el enlace de administración solo si el usuario ha iniciado sesión -->
             <a id="adminLink" href="admin.html" style="display: none;">Administración</a>
-            <!-- Botón de Login visible siempre -->
             <a id="loginLink" href="login.html">Login</a>
         </nav>
     </header>
+
+    <main>
+        <section id="eventos-sobreNosotros">
+            <div id="eventos">
+                <h2>Próximos Eventos</h2>
+                <div class="evento">
+                    <h3>Club de Lectura</h3>
+                    <p>Únete a nuestro club de lectura mensual para discutir los últimos libros.</p>
+                    <p><strong>15 de Mayo, 19:00</strong></p>
+                </div>
+                <div class="evento">
+                    <h3>Taller de Escritura</h3>
+                    <p>Aprende técnicas de escritura creativa en nuestro taller.</p>
+                    <p><strong>22 de Mayo, 17:00</strong></p>
+                </div>
+                <div class="evento">
+                    <h3>Cuentacuentos</h3>
+                    <p>Trae a tus hijos a disfrutar de nuestras sesiones de cuentacuentos.</p>
+                    <p><strong>29 de Mayo, 11:00</strong></p>
+                </div>
+            </div>
+            <div id="sobreNosotros">
+                <h2>Sobre Nosotros</h2>
+                <p>La Biblioteca Municipal es un espacio público dedicado a fomentar la lectura y el conocimiento en nuestra comunidad. Contamos con una amplia colección de libros, revistas y recursos digitales, así como una programación de eventos culturales y educativos.</p>
+        
+            </div>
+        </section>
+
+    </main>
 
     <main>
         <h2>Buscar Libros</h2>
